# praxis-neo4j

./: .env.example  .env.test  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  NOTICE  README.md  SETUP.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
scripts/: create_backup.sh  fix-permissions.sh  restore_backup.sh  start.sh  stop.sh
src/: __init__.py
src/neo4j_manager/: __init__.py  backup.py  connection.py  health_check.py
tests/: conftest.py
tests/e2e/: test_backup_restore_workflow.py
tests/integration/: test_neo4j_operations.py
tests/unit/: test_backup.py  test_connection.py  test_health_check.py
